styles/style.css
*:before,
*:after {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

:root {
  --alt-gray: rgb(228, 228, 228, 0.2);
}

/* Shared overall styles */

body {
  font-family: Arial, Helvetica, sans-serif;
  color: #555;
}

img,
p,
h1,
h2,
h3,
li,
i {
  cursor: pointer;
}

img {
  width: 100%;
}

.fas {
  padding: 0 7px;
}

/* Shared hover styles */

.article-nav li:hover,
h2:hover,
.funding-hdr p:hover,
.funding-deets p:hover,
.bullet-list li:hover {
  color: #000;
}

.topic-section h3:hover {
  text-decoration: underline;
}

.ftr-links li:hover,
.top-nav li:hover {
  color: #fff;
}

/* Grid container */
nav {
  position: fixed;
  top: 0;
  z-index: 10;
  width: 100%;
  display: grid;
  grid-template-areas: "logo icons";
  justify-content: space-between;
  align-content: center;
  margin-bottom: 80px;
  border-bottom: 0.2px solid rgb(226, 224, 224);
  background-color: #fff;
}

/* Grid items */

.logo-cntnr {
  display: flex;
  align-items: center;
  grid-area: logo;
  padding-left: 5px;
  width: 100px;
  background-color: #000;
}

.top-nav {
  grid-area: top-nav;
  height: 27px;
  color: hsla(0, 0%, 100%, 0.6);
  font-size: 13px;
  background-color: #000;
}

.article-nav {
  grid-area: article-nav;
  height: 50px;
  color: #aaa;
  font-size: 13.5px;
  background-color: #fff;
}

.nav-icons {
  display: flex;
  justify-self: end;
  align-items: center;
  grid-area: icons;
  background-color: #fff;
}

/* More navbar styling */

.top-nav,
.article-nav {
  display: none;
}

nav li {
  list-style-type: none;
}

.top-nav li {
  padding: 7px;
}

.news {
  color: #fff;
}

.article-nav li {
  padding: 7px;
}

/* Navbar media queries */

@media (min-width: 768px) {
  nav {
    grid-template-columns: auto 10fr 1fr;
    grid-template-areas:
      "logo top-nav top-nav"
      "logo article-nav icons";
  }

  .top-nav {
    display: flex;
    justify-content: space-between;
  }

  .top-nav div,
  .article-nav {
    display: flex;
    align-items: center;
    font-weight: 500;
  }

  .fa-bars {
    display: none !important;
  }
}

@media (min-width: 1024px) {
  nav {
    grid-template-areas:
      "top-nav top-nav"
      "article-nav icons" min-content / 3fr 1fr;
  }

  .logo-cntnr {
    display: none;
  }
}

main {
  margin: 12px;
  margin-top: 100px;
}

h1 {
  width: 50%;
}

h2 {
  margin: 10px 0;
  font-size: 28px;
  font-weight: 700;
  color: #f42;
}

h3 {
  font-weight: 700;
  line-height: 1.2;
}

p {
  line-height: 1.5;
}

/* Top stories grid container */
.top-stories,
.section-cntnr {
  display: grid;
  grid-gap: 10px;
}

/* Top story grid item */
.top-story {
  min-height: 30vh;
}

/* Text over image styles for stories throughout page */

.img-txt-container {
  display: grid;
  align-content: end;
  padding: 8px;
  color: #fff;
  background-position: center;
  background-size: cover;
}

.img-txt-container h3 {
  z-index: 2;
  margin-bottom: 0.25em;
  font-size: 22px;
  line-height: 1;
}

.img-txt-container p {
  z-index: 2;
  font-size: 12px;
}

.top-stories i {
  padding: 0 3px 0 5px;
}

/* Featured story on left */

.top-story-left {
  position: relative;
  background-image: linear-gradient(to bottom, var(--alt-gray), #000),
    url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/11/china-market-consumers-gq-796x417.png");
}

.gradient {
  display: none;
  position: absolute;
  width: 100%;
  height: 100%;
  background-image: linear-gradient(
    to right bottom,
    rgba(248, 62, 78, 0.45) 20%,
    rgba(255, 67, 10, 0.45) 60%,
    transparent
  );
}

/* Main logo and date for widescreen view */

.logo-and-date {
  display: none;
  position: absolute;
  width: 95%;
  padding: 20px;
  font-size: 14px;
}

.logo-and-date p {
  font-size: 14px;
}

/* Featured story on top right */
.top-story-top {
  background-image: linear-gradient(to bottom, var(--alt-gray), #000),
    url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/10/netflix-feat-796x417.png");
}

/* Featured story on bottom right */
.top-story-btm {
  background-image: linear-gradient(to bottom, var(--alt-gray), #000),
    url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/10/Untitled-design-2020-11-11T104744.768-796x417.png");
}

/* Media queries for top stories and main logo */

@media (min-width: 768px) {
  .top-stories {
    grid-template-columns: 2fr 1fr;
  }

  .top-story-left h3 {
    font-size: 40px;
  }
}

@media (min-width: 1024px) {
  .top-story {
    min-height: 13.5rem;
  }

  .top-story-left h3 {
    font-size: 50px;
  }

  .top-stories-right h3 {
    font-size: 30px;
  }

  .logo-and-date {
    display: flex;
    justify-content: space-between;
  }

  .gradient {
    display: block;
  }
}

/* Styles shared by latest news and deals sections of page */

/* Grid container */
.news-deals {
  grid-template-columns: repeat(auto-fill, minmax(235px, 1fr));
  grid-gap: 10px;
  margin: 50px 0;
}

.news-deals figure {
  display: flex;
  margin: 15px 0;
}

.news-deals img {
  object-fit: cover;
  height: 75px;
  width: 75px;
  padding-right: 10px;
}

.news-deals h3 {
  color: #000;
  font-size: 16px;
}

.news-deals h3:hover {
  color: #f42;
  text-decoration: underline;
}

.news-deals p {
  font-size: 13px;
  font-weight: 200px;
  color: #aaa;
}

/* Media queries for latest news and deals sections of page */

@media (min-width: 768px) {
  .news-deals,
  .news-deals figure {
    display: grid;
    grid-gap: 15px;
    justify-content: space-between;
    align-content: start;
  }

  .latest-news h2,
  .deals-heading {
    grid-column: 1 / -1;
  }

  .news-deals img {
    width: 100%;
    height: 145px;
    padding: 0;
  }
}

@media (min-width: 1024px) {
  .news-deals {
    margin: 50px 100px;
  }
}

/* Funding section container */
.funding {
  margin-bottom: 50px;
}

/* Funding item */
.funded {
  position: relative;
  color: #000;
  background-color: rgba(125, 85, 78, 0.08);
}

/* Funding item children */

.funded img {
  position: absolute;
  top: 10px;
  left: 10px;
  width: 60px;
  height: 60px;
}

.funded-hdr {
  text-align: center;
  background-color: rgba(255, 68, 34, 0.08);
}

.funded h3 {
  padding: 10px;
  font-size: 16px;
  color: #fff;
  background-color: #f42;
}

.amount {
  padding-top: 8px;
  font-size: 18px;
  font-weight: 700;
}

.funding-round {
  padding-bottom: 8px;
  opacity: 0.5;
  font-size: 12px;
}

.funding-deets,
.funding-btm {
  padding: 10px 15px;
  color: #555;
  font-size: 14px;
}

.funding-deets {
  border-bottom: 0.5px solid rgb(255, 68, 34, 0.3);
}

.funding-deets .fas {
  color: #000;
  line-height: 2;
}

.site-credit {
  opacity: 0.5;
}

/* Media queries for funding section */

@media (min-width: 768px) {
  .funding {
    display: grid;
    grid-gap: 10px;
  }

  .funding {
    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
  }

  .funding-hdr {
    grid-column: 1 / -1;
    grid-row: 1;
    color: #f42;
  }

  .funding-hdr p {
    display: inline-block;
    margin-top: 10px;
    padding: 0 10px;
    border-left: 1px solid #f42;
  }

  .funding-hdr p:first-of-type {
    padding-left: 0;
    border: none;
  }
}

@media (min-width: 1024px) {
  .funding-hdr {
    grid-column: 1 / -1;
    display: grid;
    grid-template-columns: 1fr auto auto auto;
  }

  .funding-hdr p {
    justify-self: end;
    align-self: center;
    margin: 0;
  }
}

/* Topic section grid container */
.section-cntnr {
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
}

/* Topic section grid item and container */
.topic-grid {
  display: grid;
  grid-template-rows: 3fr 1fr auto;
}

/* Grid items */

.section1 {
  background-image: linear-gradient(to bottom, var(--alt-gray), #000),
    url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/11/covidvaccine-368x276.jpg");
}

.section2 {
  background-image: linear-gradient(to bottom, var(--alt-gray), #000),
    url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/07/tencent-480x270.jpg");
}

.section3 {
  background-image: linear-gradient(to bottom, var(--alt-gray), #000),
    url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/10/netflix-feat-796x417.png");
}

.section4 {
  background-image: linear-gradient(to bottom, var(--alt-gray), #000),
    url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/11/emotion-emoji-gq-368x276.png");
}

.section5 {
  background-image: linear-gradient(to bottom, var(--alt-gray), #000),
    url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/09/Untitled-design-13-368x276.jpg");
}

.section6 {
  background-image: linear-gradient(to bottom, var(--alt-gray), #000),
    url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/10/google-logo-podium-368x276.png");
}

.under-story {
  display: grid;
  column-gap: 10px;
  grid-template: 30px 66px / 4fr 1fr;
  padding-left: 10px;
  color: #f42;
  font-size: 14px;
  background-color: rgba(255, 68, 34, 0.08);
}

.under-story p {
  align-self: end;
}

.under-story img {
  justify-self: end;
  width: 96px;
  height: 96px;
  object-fit: cover;
}

.bullet-list li {
  padding: 10px 0 10px 12px;
  list-style: none;
  font-size: 13px;
  border-bottom: 1px solid rgb(85, 85, 85, 0.2);
}

/* Colorized bullet point for list items */
.bullet-list li::before {
  content: "\2022";
  color: #f42;
  font-weight: bold;
  display: inline-block;
  width: 1em;
  margin-left: -1em;
}

/* Deals header */
.deals-heading {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.deals-heading p {
  color: #f42;
  font-size: 15px;
}

/* Footer */

footer {
  color: #aaa;
}

/* Top footer */

.ftr-top {
  background-color: #131313;
}

.ftr-top ul {
  display: flex;
  justify-content: center;
}

.ftr-top li {
  padding: 8px;
  font-size: 11px;
}

.ftr-icons {
  padding-top: 30px;
}

.ftr-top i {
  padding: 9px;
  height: 18px;
  width: 18px;
  color: #fff;
  font-size: 18px;
  text-align: center;
  background-color: #333;
  border-radius: 50%;
}

.ftr-links {
  padding: 20px 0;
}

/* Bottom footer */

.ftr-btm {
  padding: 40px 0;
  font-size: 12px;
  text-align: center;
  background-color: #000;
}

.ftr-btm img {
  width: 37px;
}

.bold {
  color: #fff;
  font-weight: 700;
}

/* Person icon */
.man {
  position: fixed;
  bottom: 10px;
  right: 10px;
  z-index: 10;
  height: 30px;
  width: 30px;
  padding: 7px;
  border-radius: 50%;
  background-color: #4b84e7;
  fill: #fff;
}

